--- a/hide.css
+++ b/hide.css
@@ -1,18 +1,9 @@
-/* Make #header invisible by default*/ 
-.tabs-top.address-top#browser.win:not(.fullscreen, .disable-titlebar) #header {
-    min-height: calc(36px / var(--uiZoomLevel));
-    opacity: 1;
-    pointer-events: none; 
-    transition: opacity 0.3s ease; 
-    background: blue;
-}
+/* precedence*/
  .tabs-top.address-top#browser.win:not(.fullscreen, .disable-titlebar):hover #header {
-    opacity: 0;
+    opacity: 1;
     pointer-events: auto; 
-    background: white;
 }  
 
-/* Create a hover zone at the top of the screen using a pseudo-element */
 .tabs-top.address-top#browser.win:not(.fullscreen, .disable-titlebar)::before {
     content: '';
     position: fixed;
@@ -22,6 +13,17 @@
     height: 36px;  
     z-index: 1000; 
 }
+
+
+/* Make #header invisible by default*/ 
+.tabs-top.address-top#browser.win:not(.fullscreen, .disable-titlebar) #header {
+    min-height: calc(36px / var(--uiZoomLevel));
+    opacity: 0;
+    pointer-events: none; 
+    transition: opacity 0.3s ease; 
+}
+
+
 /*
 order right but hoover works on "tab containers" only , not everywhere
 #tabs-container, 
